--- a/app/assets/styles/modules/_match.css
+++ b/app/assets/styles/modules/_match.css
@@ -3,7 +3,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: opacity 0.5s ease 0.5s;
 }
 
 .winner {
@@ -30,5 +29,13 @@ div.fadeOut {
 
 div.fadeIn {
   opacity: 1;
+  pointer-events: all;
+}
+
+div.point-events-n {
+  pointer-events: none;
+}
+
+div.point-events-a {
   pointer-events: all;
 }
